--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -25,7 +25,7 @@
 			<div class="sidebar-brand-icon rotate-n-15">
 				<i class="fas fa-laugh-wink"></i>
 			</div>
-			<div class="sidebar-brand-text mx-3">Control Médico <sup>1</sup></div>
+			<div class="sidebar-brand-text mx-3">SISCON <sup>1</sup></div>
 		</a>
 
 		<!-- Divider -->
